--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,6 @@
     }
   ],
   "env": {
-    "DATABASE_URL": "@database_url"
+    "DATABASE_URL": "@postgresql://neondb_owner:npg_hdISOQGi87PC@ep-billowing-thunder-a1o0slff-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
   }
 }
